--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -2,6 +2,20 @@
 <html lang="zxx">
   <head>
     <title>SAASWAD</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-96171225-3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-96171225-3");
+    </script>
     <meta charset="UTF-8" />
     <meta name="description" content="SAASWAD.com" />
     <meta name="keywords" content="industry, html" />
@@ -134,7 +148,7 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
-    <a href="#" id="scroll" style="display: none;"><span></span></a>
+    <a href="#" id="scroll" style="display: none"><span></span></a>
 
     <!-- Header section  -->
     <header class="header-section clearfix">
@@ -173,9 +187,7 @@
             </div>
             <div class="hib-text">
               <h6>Corporate Office-B-38/47 PR,Tulsipur</h6>
-              <p>
-                Mahmoorganj,Varanasi Uttar Pradesh,India-221010
-              </p>
+              <p>Mahmoorganj,Varanasi Uttar Pradesh,India-221010</p>
             </div>
           </div>
           <!-- <button class="search-switch"><i class="fa fa-search"></i></button> -->
@@ -208,7 +220,7 @@
       <div class="container h-100">
         <div class="d-flex h-100 align-items-center">
           <div class="w-100 text-white">
-            <h2 style="font-weight: 300; color: #fff; margin-bottom: 25px;">
+            <h2 style="font-weight: 300; color: #fff; margin-bottom: 25px">
               About us
             </h2>
             <a href="#mission" class="site-btn">Discover</a>
@@ -246,14 +258,12 @@
     <section id="mission" class="team-section spad">
       <div class="container">
         <div class="team-text">
-          <h2 style="font-weight: bolder;">
-            Our <span style="color: red;">Vision</span>,<span
-              style="color: red;"
-            >
+          <h2 style="font-weight: bolder">
+            Our <span style="color: red">Vision</span>,<span style="color: red">
               Mission</span
             >
             and
-            <span style="color: red;">Goal</span>
+            <span style="color: red">Goal</span>
           </h2>
           <!-- <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
@@ -269,7 +279,7 @@
             <div class="team-member">
               <!-- <img src="img/team/1.jpg" alt="" /> -->
               <div class="member-info">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                <h3 style="font-size: 2rem; margin-bottom: 20px">
                   <img
                     src="icon-fonts/icons-main/company-vision.png"
                     class="center_1"
@@ -278,7 +288,7 @@
 
                   Our Vision
                 </h3>
-                <p style="font-size: 1rem;">
+                <p style="font-size: 1rem">
                   Our Vision is to be a global leader in the manufacturing of
                   high-quality heat transfer equipment and sheet metal
                   equipment.
@@ -290,8 +300,8 @@
           <div class="col-md-4">
             <div class="team-member">
               <!-- <img src="img/team/1.jpg" alt="" /> -->
-              <div class="member-info" style="padding-bottom: 79px;">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+              <div class="member-info" style="padding-bottom: 79px">
+                <h3 style="font-size: 2rem; margin-bottom: 20px">
                   <img
                     src="icon-fonts/icons-main/mission.png"
                     class="center_1"
@@ -299,7 +309,7 @@
                   />
                   Our Mission
                 </h3>
-                <p style="font-size: 1rem;">
+                <p style="font-size: 1rem">
                   Our Mission is to build and supply optimized quality heat
                   transfer equipment for diesel, gas and electric application.
                 </p>
@@ -310,8 +320,8 @@
           <div class="col-md-4">
             <div class="team-member">
               <!-- <img src="img/team/1.jpg" alt="" /> -->
-              <div class="member-info" style="padding-bottom: 79px;">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+              <div class="member-info" style="padding-bottom: 79px">
+                <h3 style="font-size: 2rem; margin-bottom: 20px">
                   <img
                     src="icon-fonts/icons-main/mission (1).png"
                     class="center_1"
@@ -319,7 +329,7 @@
                   />
                   Our Goal
                 </h3>
-                <p style="font-size: 1rem;">
+                <p style="font-size: 1rem">
                   Our Goal is to provide the best solution for our customers in
                   order to achieve customer delight.
                 </p>
@@ -406,7 +416,7 @@
           </div>
           <div class="col-lg-6">
             <div class="about-text">
-              <h2 style="font-weight: bolder;">Managing Director's Remarks</h2>
+              <h2 style="font-weight: bolder">Managing Director's Remarks</h2>
               <p
                 style="
                   font-size: 1.25rem;
@@ -472,10 +482,10 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-widget">
-              <div style="margin-bottom: 25px;">
+              <div style="margin-bottom: 25px">
                 <img
                   src="img/logo_saswadw.png"
-                  style="margin-right: 5px;"
+                  style="margin-right: 5px"
                   height="30"
                   alt=""
                 />
