--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -24,6 +24,20 @@
 
     <!-- Main Stylesheets -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-96171225-3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-96171225-3");
+    </script>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -90,34 +104,28 @@
       .column1 img:hover {
         border: 5px solid red;
       }
-      img.new{
+      img.new {
         margin-top: 180px;
         border-color: red;
         border-style: solid;
         border-width: medium;
-
       }
-      img.new2{
+      img.new2 {
         margin-top: 180px;
         border-color: Black;
         border-style: solid;
         border-width: medium;
-
       }
-      img.new1{
+      img.new1 {
         margin-top: 130px;
         border-style: solid;
         border-width: medium;
-
-
       }
-      img.new4{
+      img.new4 {
         margin-top: 130px;
         border-color: red;
         border-style: solid;
         border-width: medium;
-
-
       }
       /* Responsive layout - makes a two column-layout instead of four columns */
       @media screen and (max-width: 800px) {
@@ -200,7 +208,7 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
-    <a href="#" id="scroll" style="display: none;"><span></span></a>
+    <a href="#" id="scroll" style="display: none"><span></span></a>
 
     <!-- Header section  -->
     <header class="header-section clearfix">
@@ -239,9 +247,7 @@
             </div>
             <div class="hib-text">
               <h6>Corporate Office-B-38/47 PR,Tulsipur</h6>
-              <p>
-                Mahmoorganj,Varanasi Uttar Pradesh,India-221010
-              </p>
+              <p>Mahmoorganj,Varanasi Uttar Pradesh,India-221010</p>
             </div>
           </div>
           <!-- <button class="search-switch"><i class="fa fa-search"></i></button> -->
@@ -423,10 +429,10 @@
         <div class="row">
           <div class="col-lg-4">
             <ul class="nav nav-tabs reserch-tab-menu" role="tablist">
-              <h2 style="color: Black; margin-bottom: 20px;">
+              <h2 style="color: Black; margin-bottom: 20px">
                 <center>MANUFACTURING FACILITIES</center>
               </h2>
-              <li class="nav-item" >
+              <li class="nav-item">
                 <a
                   class="nav-link active"
                   data-toggle="tab"
@@ -505,21 +511,22 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-8" style="text-align: center;">
+          <div class="col-lg-8" style="text-align: center">
             <div class="tab-content reserch-tab">
-
               <!-- single tab content -->
               <div
                 class="tab-pane fade show active"
                 id="tab-1"
                 role="tabpanel"
                 aria-labelledby="tab-1"
-                >
-
-                <img class="new2" src="img/bending_machine.jpg" alt="" width="500"  />
-                <h4 style=" color:black; margin-top: 20px;">
-                  BENDING MACHINE
-                </h4>
+              >
+                <img
+                  class="new2"
+                  src="img/bending_machine.jpg"
+                  alt=""
+                  width="500"
+                />
+                <h4 style="color: black; margin-top: 20px">BENDING MACHINE</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -527,11 +534,13 @@
                 role="tabpanel"
                 aria-labelledby="tab-2"
               >
-
-                <img class="new2" src="img/cnc_blender_tube.jpg" alt="" width="500" />
-                <h4 style=" color:black; margin-top: 20px;">
-                  CNC_BLENDER_TUBE
-                </h4>
+                <img
+                  class="new2"
+                  src="img/cnc_blender_tube.jpg"
+                  alt=""
+                  width="500"
+                />
+                <h4 style="color: black; margin-top: 20px">CNC_BLENDER_TUBE</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -539,11 +548,13 @@
                 role="tabpanel"
                 aria-labelledby="tab-3"
               >
-
-                <img class="new2"src="img/shearing_machine.jpg" alt="" width="500" />
-                <h4 style=" color:black; margin-top: 20px;">
-                  SHEARING MACHINE
-                </h4>
+                <img
+                  class="new2"
+                  src="img/shearing_machine.jpg"
+                  alt=""
+                  width="500"
+                />
+                <h4 style="color: black; margin-top: 20px">SHEARING MACHINE</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -551,11 +562,13 @@
                 role="tabpanel"
                 aria-labelledby="tab-4"
               >
-
-                <img class="new2"src="img/cnc_vertical_machine.jpg" alt="" width="500" />
-                <h4 style=" color: black;margin-top: 20px;">
-                  CNC_V_MACHINE
-                </h4>
+                <img
+                  class="new2"
+                  src="img/cnc_vertical_machine.jpg"
+                  alt=""
+                  width="500"
+                />
+                <h4 style="color: black; margin-top: 20px">CNC_V_MACHINE</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -563,11 +576,8 @@
                 role="tabpanel"
                 aria-labelledby="tab-5"
               >
-
-                <img class="new2"src="img/oven.jpg" alt="" width="500" />
-                <h4 style="color: black;margin-top: 20px;">
-                  OVEN
-                </h4>
+                <img class="new2" src="img/oven.jpg" alt="" width="500" />
+                <h4 style="color: black; margin-top: 20px">OVEN</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -575,11 +585,13 @@
                 role="tabpanel"
                 aria-labelledby="tab-6"
               >
-
-                <img class="new1"src="img/punching_machine.jpg" alt="" width="300" />
-                <h4 style="color: black;margin-top: 20px;">
-                  PUNCHING MACHINE
-                </h4>
+                <img
+                  class="new1"
+                  src="img/punching_machine.jpg"
+                  alt=""
+                  width="300"
+                />
+                <h4 style="color: black; margin-top: 20px">PUNCHING MACHINE</h4>
               </div>
               <!-- <div
                 class="tab-pane fade"
@@ -651,7 +663,6 @@
                 <img src="img/facility9.JPG" alt="" width="3 00" />
               </div> -->
             </div>
-
           </div>
           <!-- <div class="col-lg-4">
             <ul class="nav nav-tabs reserch-tab-menu" role="tablist">
@@ -806,7 +817,7 @@
                 >POWDER COATING</a
               >
             </li> -->
-              <!-- <li class="nav-item">
+          <!-- <li class="nav-item">
                 <a
                   class="nav-link"
                   data-toggle="tab"
@@ -819,7 +830,7 @@
               </li>
             </ul>
           </div> -->
-          <div class="col-lg-8" style="text-align: center;">
+          <div class="col-lg-8" style="text-align: center">
             <div class="tab-content reserch-tab">
               <!-- single tab content -->
               <!-- <div
@@ -894,9 +905,14 @@
                 role="tabpanel"
                 aria-labelledby="tab-7"
               >
-
-                <img class="new" src="img/facility1.JPG" alt="" width="500" border="2" />
-                <h4 style="color: white;margin-top: 20px;">
+                <img
+                  class="new"
+                  src="img/facility1.JPG"
+                  alt=""
+                  width="500"
+                  border="2"
+                />
+                <h4 style="color: white; margin-top: 20px">
                   RADIATOR HATCH TEST RIG
                 </h4>
               </div>
@@ -906,9 +922,8 @@
                 role="tabpanel"
                 aria-labelledby="tab-8"
               >
-
-                <img  class="new"src="img/facility2.JPG" alt="" width="500" />
-                <h4 style="color: white;margin-top: 20px;">
+                <img class="new" src="img/facility2.JPG" alt="" width="500" />
+                <h4 style="color: white; margin-top: 20px">
                   OIL COOLER TEST RIG
                 </h4>
               </div>
@@ -918,9 +933,8 @@
                 role="tabpanel"
                 aria-labelledby="tab-9"
               >
-
-                <img class="new4"src="img/facility3.JPG" alt="" width="500" />
-                <h4 style=" color: white;margin-top: 50px;">
+                <img class="new4" src="img/facility3.JPG" alt="" width="500" />
+                <h4 style="color: white; margin-top: 50px">
                   THERMAL CYCLE TEST RIG
                 </h4>
               </div>
@@ -930,11 +944,8 @@
                 role="tabpanel"
                 aria-labelledby="tab-10"
               >
-
-                <img class="new4"src="img/facility4.JPG" alt="" width="500" />
-                <h4 style=" color: white;margin-top: 50px;">
-                  WIND TUNNEL
-                </h4>
+                <img class="new4" src="img/facility4.JPG" alt="" width="500" />
+                <h4 style="color: white; margin-top: 50px">WIND TUNNEL</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -942,11 +953,8 @@
                 role="tabpanel"
                 aria-labelledby="tab-11"
               >
-
                 <img class="new" src="img/facility5.JPG" alt="" width="500" />
-                <h4  style=" color: white;margin-top: 50px;">
-                  SALT SPRAY TEST
-                </h4>
+                <h4 style="color: white; margin-top: 50px">SALT SPRAY TEST</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -954,12 +962,11 @@
                 role="tabpanel"
                 aria-labelledby="tab-12"
               >
-
-                <img class="new4"src="img/facility6.JPG" alt="" width="300" />
-                <img class="new4"src="img/facility7.JPG" alt="" width="300" />
+                <img class="new4" src="img/facility6.JPG" alt="" width="300" />
+                <img class="new4" src="img/facility7.JPG" alt="" width="300" />
                 <img src="img/facility8.JPG" alt="" width="300" />
                 <img src="img/facility9.JPG" alt="" width="300" />
-                <h4 style=" color: white;margin-top: 50px;">
+                <h4 style="color: white; margin-top: 50px">
                   ADDITIONAL FACILITIES
                 </h4>
               </div>
@@ -967,7 +974,7 @@
           </div>
           <div class="col-lg-4">
             <ul class="nav nav-tabs reserch-tab-menu" role="tablist">
-              <h2 style="color: white; margin-bottom: 60px;">
+              <h2 style="color: white; margin-bottom: 60px">
                 <center>TESTING FACILITIES</center>
               </h2>
               <li class="nav-item">
@@ -1042,10 +1049,6 @@
       </div>
     </section>
 
-
-
-
-
     <!-- Blog section end  -->
     <section id="mission" class="team-section spad">
       <div class="container">
@@ -1054,12 +1057,10 @@
             <div class="team-member">
               <!-- <img src="img/team/1.jpg" alt="" /> -->
               <div class="member-info">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                <h3 style="font-size: 2rem; margin-bottom: 20px">
                   Coorporate Office
                 </h3>
-                <p style="font-size: 1rem;">
-                  Varanasi, India
-                </p>
+                <p style="font-size: 1rem">Varanasi, India</p>
                 <a href="./coorporate_office.html" class="site-btn"
                   >Know More</a
                 >
@@ -1070,12 +1071,10 @@
             <div class="team-member">
               <!-- <img src="img/team/1.jpg" alt="" /> -->
               <div class="member-info">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                <h3 style="font-size: 2rem; margin-bottom: 20px">
                   Varanasi Unit
                 </h3>
-                <p style="font-size: 1rem;">
-                  Varanasi, India
-                </p>
+                <p style="font-size: 1rem">Varanasi, India</p>
                 <a href="unit3.html" class="site-btn">Know More</a>
               </div>
             </div>
@@ -1084,12 +1083,8 @@
             <div class="team-member">
               <!-- <img src="img/team/1.jpg" alt="" /> -->
               <div class="member-info">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
-                  Pune Unit
-                </h3>
-                <p style="font-size: 1rem;">
-                  Pune, India
-                </p>
+                <h3 style="font-size: 2rem; margin-bottom: 20px">Pune Unit</h3>
+                <p style="font-size: 1rem">Pune, India</p>
                 <a href="./unit4.html" class="site-btn">Know More</a>
               </div>
             </div>
@@ -1099,7 +1094,7 @@
     </section>
 
     <!-- Call to action section  -->
-    <section style="margin-top: 100px;" class="cta-section">
+    <section style="margin-top: 100px" class="cta-section">
       <div class="container">
         <div class="row">
           <div class="col-lg-9 d-flex align-items-center">
@@ -1136,10 +1131,10 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-widget">
-              <div style="margin-bottom: 25px;">
+              <div style="margin-bottom: 25px">
                 <img
                   src="img/logo_saswadw.png"
-                  style="margin-right: 5px;"
+                  style="margin-right: 5px"
                   height="30"
                   alt=""
                 />
