--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -25,7 +25,20 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/slicknav.min.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-96171225-3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
+      gtag("config", "UA-96171225-3");
+    </script>
     <!-- Main Stylesheets -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -86,7 +99,7 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
-    <a href="#" id="scroll" style="display: none;"><span></span></a>
+    <a href="#" id="scroll" style="display: none"><span></span></a>
 
     <!-- Header section  -->
     <header class="header-section clearfix">
@@ -125,9 +138,7 @@
             </div>
             <div class="hib-text">
               <h6>Corporate Office-B-38/47 PR,Tulsipur</h6>
-              <p>
-                Mahmoorganj,Varanasi Uttar Pradesh,India-221010
-              </p>
+              <p>Mahmoorganj,Varanasi Uttar Pradesh,India-221010</p>
             </div>
           </div>
           <!-- <button class="search-switch"><i class="fa fa-search"></i></button> -->
@@ -179,8 +190,8 @@
     </section>
     <br />
     <br />
-    <h3 style="margin-bottom: 20px;">
-      <center>Pune Unit </center>
+    <h3 style="margin-bottom: 20px">
+      <center>Pune Unit</center>
     </h3>
     <br />
     <div class="map-section">
@@ -205,7 +216,7 @@
           width="500"
           height="450"
           frameborder="0"
-          style="border: 0;"
+          style="border: 0"
           allowfullscreen=""
           aria-hidden="false"
           tabindex="0"
@@ -240,8 +251,8 @@
         </div>
       </div>
     </div>
-      <br>
-  <br>
+    <br />
+    <br />
     <!-- Page top section end  -->
 
     <!-- Footer section -->
@@ -265,10 +276,10 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-widget">
-              <div style="margin-bottom: 25px;">
+              <div style="margin-bottom: 25px">
                 <img
                   src="img/logo_saswadw.png"
-                  style="margin-right: 5px;"
+                  style="margin-right: 5px"
                   height="30"
                   alt=""
                 />
