--- a/industryinc/elements.html
+++ b/industryinc/elements.html
@@ -21,6 +21,20 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/slicknav.min.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-96171225-3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-96171225-3");
+    </script>
 
     <!-- Main Stylesheets -->
     <link rel="stylesheet" href="css/style.css" />
