--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>SAASWAD</title>
+    <title>Saaswad Heat Transfer And Engineering Pvt Ltd</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
