--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>SAASWAD</title>
+    <title>Saaswad Heat Transfer And Engineering Pvt Ltd</title>
     <meta charset="UTF-8" />
     <meta name="description" content="SAASWAD.com" />
     <meta name="keywords" content="industry, html" />
