--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -256,7 +256,7 @@
                   <!-- <div class="si-icon"> -->
                   <img src="img/newimage5.JPG" alt="" height="100px" />
                   <!-- </div> -->
-                  <h5>Industrial Radiators</h5>
+                  <h5>Industrial Radiator</h5>
                 </div>
                 <!-- <p>
                   Application-Power Generation
