--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -198,7 +198,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.php">Products</a>
+              <a href="products.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
@@ -469,7 +469,7 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li class="active"><a href="about.html">About us</a></li>
-              <li><a href="solutions.php">Products</a></li>
+              <li><a href="products.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
@@ -495,7 +495,7 @@
                 We introduce ourselves as one of the Leading Manufacturers of
                 Industrial Radiators, Oil Coolers, Heat Exchangers and Charged
                 Air Coolers in India. We are known for manufacturing quality
-                products and providing complete solutions through technical
+                products and providing complete products through technical
                 expertise and after-sales service to our customers.
               </p>
               <div class="footer-social">
@@ -517,12 +517,12 @@
                 </li>
                 <li>
                   <a class="hover1" href="./mradiator.php"
-                    >Mechanically Bonded Radiators</a
+                    >Custom designed heat exchangers</a
                   >
                 </li>
                 <li>
                   <a class="hover1" href="./acooler.php"
-                    >Radiator, Oil cooler and AfterCoolers Assembly</a
+                    >Oil coolers and condensers</a
                   >
                 </li>
                 <li>
