--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -168,7 +168,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.php">Products</a>
+              <a href="products.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
@@ -199,7 +199,7 @@
               >
               <a
                 style="opacity: inherit"
-                href="solutions.php"
+                href="products.php"
                 class="site-btn sb-dark"
                 >Products</a
               >
@@ -254,7 +254,9 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img src="img/newimage5.JPG" alt="" height="100px" />
+                  <a href="./radiator.php"
+                    ><img src="img/newimage5.JPG" alt="" height="100px"
+                  /></a>
                   <!-- </div> -->
                   <h5>Industrial Radiators</h5>
                 </div>
@@ -267,7 +269,9 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img src="img/newimage8.png" alt="" height="100px" />
+                  <a href="./acooler.php"
+                    ><img src="img/newimage8.png" alt="" height="100px"
+                  /></a>
                   <!-- </div> -->
                   <h5>Oil Coolers</h5>
                 </div>
@@ -277,7 +281,9 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img src="img/KPC 709.png" alt="" height="100px" />
+                  <a href="./mradiator.php"
+                    ><img src="img/KPC 709.png" alt="" height="100px"
+                  /></a>
                   <!-- </div> -->
                   <h5>Heat Exchangers</h5>
                 </div>
@@ -287,7 +293,9 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img src="img/newimage1.JPG" alt="" height="100px" />
+                  <a href="./tacooler.php"
+                    ><img src="img/newimage1.JPG" alt="" height="100px"
+                  /></a>
                   <!-- </div> -->
                   <h5>Charged Air Coolers</h5>
                 </div>
@@ -372,6 +380,7 @@
               <img src="img/company3.jpg" alt="" />
               <div class="fb-text">
                 <h5>Cummins India Ltd.</h5>
+
                 <p>
                   Formed in 1962, the largest entity of Cummins in India,
                   Cummins India Limited is the country’s leading manufacturer of
@@ -389,6 +398,7 @@
               <img src="img/company1.jpg" alt="" />
               <div class="fb-text" style="padding-bottom: 16px">
                 <h5>Greaves Cotton Ltd.</h5>
+
                 <p>
                   Greaves Cotton Limited, a diversified engineering company that
                   is a leading manufacturer and marketer of diesel engines,
@@ -592,7 +602,7 @@
             <ul class="footer-menu text-center">
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.php">Products</a></li>
+              <li><a href="products.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
@@ -618,7 +628,7 @@
                 We introduce ourselves as one of the Leading Manufacturers of
                 Industrial Radiators, Oil Coolers, Heat Exchangers and Charged
                 Air Coolers in India. We are known for manufacturing quality
-                products and providing complete solutions through technical
+                products and providing complete products through technical
                 expertise and after-sales service to our customers.
               </p>
               <div class="footer-social">
@@ -640,12 +650,12 @@
                 </li>
                 <li>
                   <a class="hover1" href="./mradiator.php"
-                    >Mechanically Bonded Radiators</a
+                    >Custom designed heat exchangers</a
                   >
                 </li>
                 <li>
                   <a class="hover1" href="./acooler.php"
-                    >Radiator, Oil cooler and AfterCoolers Assembly</a
+                    >Oil coolers and condensers</a
                   >
                 </li>
                 <li>
