--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -331,7 +331,7 @@
         <div class="img__wrap">
           <div class="container_1">
             <img src="img/cnc_blender_tube.jpg" class="image_1" />
-            <div class="overlay_1">CNC_BLENDER_TUBE</div>
+            <div class="overlay_1">CNC BLENDER TUBE</div>
           </div>
         </div>
         <div class="img__wrap">
@@ -345,7 +345,7 @@
         <div class="img__wrap">
           <div class="container_1">
             <img src="img/cnc_vertical_machine.jpg" class="image_1" />
-            <div class="overlay_1">CNC_VERTICAL_MACHINE</div>
+            <div class="overlay_1">CNC VERTICAL MACHINE</div>
           </div>
         </div>
 
@@ -436,6 +436,17 @@
                 <a
                   class="nav-link active"
                   data-toggle="tab"
+                  href="#tab-4"
+                  role="tab"
+                  aria-controls="tab-4"
+                  aria-selected="false"
+                  >CNC VERTICAL MACHINE</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  data-toggle="tab"
                   href="#tab-1"
                   role="tab"
                   aria-controls="tab-1"
@@ -451,7 +462,7 @@
                   role="tab"
                   aria-controls="tab-2"
                   aria-selected="false"
-                  >CNC_BLENDER_TUBE</a
+                  >CNC BLENDER TUBE</a
                 >
               </li>
               <li class="nav-item">
@@ -465,17 +476,7 @@
                   >SHEARING MACHINE</a
                 >
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  data-toggle="tab"
-                  href="#tab-4"
-                  role="tab"
-                  aria-controls="tab-4"
-                  aria-selected="false"
-                  >CNC_VERTICAL_MACHINE</a
-                >
-              </li>
+
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -515,7 +516,7 @@
             <div class="tab-content reserch-tab">
               <!-- single tab content -->
               <div
-                class="tab-pane fade show active"
+                class="tab-pane fade"
                 id="tab-1"
                 role="tabpanel"
                 aria-labelledby="tab-1"
@@ -540,7 +541,7 @@
                   alt=""
                   width="500"
                 />
-                <h4 style="color: black; margin-top: 20px">CNC_BLENDER_TUBE</h4>
+                <h4 style="color: black; margin-top: 20px">CNC BLENDER TUBE</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -557,7 +558,7 @@
                 <h4 style="color: black; margin-top: 20px">SHEARING MACHINE</h4>
               </div>
               <div
-                class="tab-pane fade"
+                class="tab-pane fade show active"
                 id="tab-4"
                 role="tabpanel"
                 aria-labelledby="tab-4"
@@ -568,7 +569,7 @@
                   alt=""
                   width="500"
                 />
-                <h4 style="color: black; margin-top: 20px">CNC_V_MACHINE</h4>
+                <h4 style="color: black; margin-top: 20px">CNC V MACHINE</h4>
               </div>
               <div
                 class="tab-pane fade"
@@ -669,6 +670,17 @@
               <h2 style="color: white; margin-bottom: 60px;">
                 <center>TESTING FACILITIES</center>
               </h2>
+              <li class="nav-item active">
+                <a
+                  class="nav-link"
+                  data-toggle="tab"
+                  href="#tab-9"
+                  role="tab"
+                  aria-controls="tab-9"
+                  aria-selected="false"
+                  >THERMAL CYCLE TEST RIG</a
+                >
+              </li>
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -691,17 +703,7 @@
                   >OIL COOLER TEST RIG</a
                 >
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  data-toggle="tab"
-                  href="#tab-9"
-                  role="tab"
-                  aria-controls="tab-9"
-                  aria-selected="false"
-                  >THERMAL CYCLE TEST RIG</a
-                >
-              </li>
+              
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -751,9 +753,20 @@
               <h2 style="color: white; margin-bottom: 20px;">
                 <center>MANUFACTURING FACILITIES</center>
               </h2>
+              <li class="nav-item active">
+                <a
+                  class="nav-link"
+                  data-toggle="tab"
+                  href="#tab-4"
+                  role="tab"
+                  aria-controls="tab-4"
+                  aria-selected="false"
+                  >CNC VERTICAL MACHINE</a
+                >
+              </li>
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   data-toggle="tab"
                   href="#tab-1"
                   role="tab"
@@ -770,7 +783,7 @@
                   role="tab"
                   aria-controls="tab-2"
                   aria-selected="false"
-                  >CNC_BLENDER_TUBE</a
+                  >CNC BLENDER TUBE</a
                 >
               </li>
               <li class="nav-item">
@@ -784,17 +797,7 @@
                   >SHEARING MACHINE</a
                 >
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  data-toggle="tab"
-                  href="#tab-4"
-                  role="tab"
-                  aria-controls="tab-4"
-                  aria-selected="false"
-                  >CNC_VERTICAL_MACHINE</a
-                >
-              </li>
+              
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -834,7 +837,7 @@
             <div class="tab-content reserch-tab">
               <!-- single tab content -->
               <!-- <div
-                class="tab-pane fade show active"
+                class="tab-pane fade show"
                 id="tab-1"
                 role="tabpanel"
                 aria-labelledby="tab-1"
@@ -851,7 +854,7 @@
                 aria-labelledby="tab-2"
               >
                 <h2 style="margin-bottom: 100px;">
-                  CNC_BLENDER_TUBE
+                  CNC BLENDER TUBE
                 </h2>
                 <img src="img/cnc_blender_tube.jpg" alt="" width="500" />
               </div>
@@ -867,13 +870,13 @@
                 <img src="img/shearing_machine.jpg" alt="" width="600" />
               </div>
               <div
-                class="tab-pane fade"
+                class="tab-pane fade active"
                 id="tab-4"
                 role="tabpanel"
                 aria-labelledby="tab-4"
               >
                 <h2 style="margin-bottom: 100px;">
-                  CNC_V_MACHINE
+                  CNC V MACHINE
                 </h2>
                 <img src="img/cnc_vertical_machine.jpg" alt="" width="600" />
               </div>
@@ -900,7 +903,7 @@
                 <img src="img/punching_machine.jpg" alt="" width="500" />
               </div> -->
               <div
-                class="tab-pane fade show active"
+                class="tab-pane fade"
                 id="tab-7"
                 role="tabpanel"
                 aria-labelledby="tab-7"
@@ -928,7 +931,7 @@
                 </h4>
               </div>
               <div
-                class="tab-pane fade"
+                class="tab-pane fade show active"
                 id="tab-9"
                 role="tabpanel"
                 aria-labelledby="tab-9"
@@ -979,6 +982,17 @@
               </h2>
               <li class="nav-item">
                 <a
+                  class="nav-link active"
+                  data-toggle="tab"
+                  href="#tab-9"
+                  role="tab"
+                  aria-controls="tab-9"
+                  aria-selected="false"
+                  >THERMAL CYCLE TEST RIG</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
                   class="nav-link"
                   data-toggle="tab"
                   href="#tab-7"
@@ -999,17 +1013,7 @@
                   >OIL COOLER TEST RIG</a
                 >
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  data-toggle="tab"
-                  href="#tab-9"
-                  role="tab"
-                  aria-controls="tab-9"
-                  aria-selected="false"
-                  >THERMAL CYCLE TEST RIG</a
-                >
-              </li>
+
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -1058,7 +1062,7 @@
               <!-- <img src="img/team/1.jpg" alt="" /> -->
               <div class="member-info">
                 <h3 style="font-size: 2rem; margin-bottom: 20px">
-                  Coorporate Office
+                  Corporate Office
                 </h3>
                 <p style="font-size: 1rem">Varanasi, India</p>
                 <a href="./coorporate_office.html" class="site-btn"
