--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -363,7 +363,9 @@
             <div class="feature-box">
               <img src="img/company2.jpg" alt="" />
               <div class="fb-text">
-                <h5>Indian Railways</h5>
+                <a href="https://www.indianrailways.gov.in/"
+                  ><h5>Indian Railways</h5></a
+                >
                 <p>
                   Indian Railways is a governmental entity under the Ministry of
                   Railways which operates India's national railway system. It is
@@ -379,7 +381,9 @@
             <div class="feature-box">
               <img src="img/company3.jpg" alt="" />
               <div class="fb-text">
-                <h5>Cummins India Ltd.</h5>
+                <a href="https://www.cummins.com/en/in/company/cummins-india"
+                  ><h5>Cummins India Ltd.</h5></a
+                >
 
                 <p>
                   Formed in 1962, the largest entity of Cummins in India,
@@ -397,7 +401,7 @@
             <div class="feature-box">
               <img src="img/company1.jpg" alt="" />
               <div class="fb-text" style="padding-bottom: 16px">
-                <h5>Greaves Cotton Ltd.</h5>
+                <a href="#"><h5>Greaves Cotton Ltd.</h5></a>
 
                 <p>
                   Greaves Cotton Limited, a diversified engineering company that
